--- a/main.css
+++ b/main.css
@@ -2,3 +2,10 @@ body {
 	background: #404040;
 }
 
+canvas {
+	background: #fefefe;
+	width: 1280px;
+	height: 800px;
+	display: block;
+    margin: 0 auto;
+}
