--- a/main.css
+++ b/main.css
@@ -126,3 +126,12 @@ canvas {
 	filter: progid:DXImageTransform.Microsoft.Shadow(Strength = 10, Direction = 135, Color = '#cccccc');
 }
 
+.selected{
+	-moz-box-shadow: 5px 5px 10px #326;
+	-webkit-box-shadow: 5px 5px 10px #326;
+	box-shadow: 5px 5px 10px #326; /* For IE 8 */
+	
+}
+
+
+
