--- a/main.css
+++ b/main.css
@@ -1,23 +1,35 @@
+:root {
+	--c_nadir:#000000;
+	--c_nightEnd:#050510;
+	--c_dawn:#372e38;
+	--c_sunrise:#6d555d;
+	--c_sunriseEnd:#a4827d;
+	--c_goldenHourEnd:#d4b79f;
+	--c_solarNoon:#f9f1c9;
+	--c_goldenHour:#d4b79f;
+	--c_sunsetStart:#a4827d;
+	--c_sunset:#6d555d;
+	--c_dusk:#372e38;
+	--c_night:#05051;
+}
+
 body {
 	background: #404040;
 }
 
-canvas {
-	background: #fefefe;
-	width: 1280px;
-	height: 800px;
-	display: block;
-	margin: 0 auto;
-}
-
 #canvas {
-	background-color: #D9D7DD;
+	//background-color: #D9D7DD;
+	background-color: #fff;
 	width: 1280px;
 	height: 800px;
 	margin: 0 auto;
 
+	background-image: url("img/GD_002.jpg");
+	background-size: cover;
 	position: relative;
 }
+
+
 
 .clock {
 	width: 100px;
@@ -28,8 +40,8 @@ canvas {
 	right: 50px;
 	
 	border-radius: 100%;
-	background: #ffffff;
-	border: 5px solid white;
+	background: #ddd;
+	border: 5px solid #ddd;
 	box-shadow: inset 2px 3px 8px 0 rgba(0, 0, 0, 0.1);
 }
 
@@ -89,9 +101,39 @@ canvas {
 	top: 300px;
 	right: 50px;
 
-	background-color: red;
+
+	//background-color: #D9D7DD;
 	display: block;
 }
+
+.sunCicle {
+	animation-name: sunColor;
+	animation-iteration-count: infinite;
+	animation-timing-function: ease;
+	animation-duration: 1s;
+	animation-play-state: paused;
+}
+
+@keyframes sunColorInv {
+	0%, 100% { background: #000000; }
+	7%, 92% {background: #050510;}
+	14%, 85% {background: #372e38;}
+	21%, 78% {background: #6d555d;}
+	28%, 71% {background: #a4827d;}
+	35%, 64% {background: #d4b79f;}
+	50% {background: #f9f1c9;}
+}
+
+@keyframes sunColor {
+	0%, 100% { background: #f9f1c9; }
+	7%, 92% {background: #d4b79f;}
+	14%, 85% {background: #a4827d;}
+	21%, 78% {background: #6d555d;}
+	28%, 71% {background: #372e38;}
+	35%, 64% {background: #050510;}
+	50% {background: #000000;}
+}
+
 
 #controls_speed {
 	height: 26px;
@@ -101,7 +143,6 @@ canvas {
 	right: 0px;
 	text-align: center;
 	padding: 2px;
-  	//background-color: #ccc;
 }
 
 .controlsSpeed { 
@@ -113,25 +154,22 @@ canvas {
 }
 
 .controlsSpeed img {
-    max-width: 100%;
-    max-height: 100%;
-    vertical-align: middle;
+	max-width: 100%;
+	max-height: 100%;
+	vertical-align: middle;
 }
 
+#info{
+
+}
 .shadow{
-	-moz-box-shadow: 5px 5px 10px #666;
 	-webkit-box-shadow: 5px 5px 10px #666;
 	box-shadow: 5px 5px 10px #666; /* For IE 8 */
 	-ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=10, Direction=135, Color='#cccccc')"; /* For IE 5.5 - 7 */
-	filter: progid:DXImageTransform.Microsoft.Shadow(Strength = 10, Direction = 135, Color = '#cccccc');
 }
 
 .selected{
-	-moz-box-shadow: 5px 5px 10px #326;
 	-webkit-box-shadow: 5px 5px 10px #326;
 	box-shadow: 5px 5px 10px #326; /* For IE 8 */
 	
 }
-
-
-
