--- a/main.css
+++ b/main.css
@@ -1,4 +1,15 @@
 body {
 	background: #404040;
-	margin: 0 auto;
+	display: inline-block;
+	margin: 0px auto;
+}
+
+.shadow{
+	-webkit-box-shadow: 5px 5px 10px #666;
+	box-shadow: 5px 5px 10px #666;
+}
+
+.selected{
+	-webkit-box-shadow: 5px 5px 10px #326;
+	box-shadow: 5px 5px 10px #326; 
 }
