--- a/main.css
+++ b/main.css
@@ -1,3 +1,9 @@
+@font-face {
+	font-family: 'Poppins';
+	src:
+		url('res/Poppins-Regular.ttf')
+}
+
 body {
 	background: #404040;
 	display: inline-block;
@@ -69,4 +75,67 @@ body {
 	border-radius: 30%;
 	margin: auto;
 	z-index: 1;
+}
+
+.scheduleBox {
+	width: 30px;
+	height: 30px;
+	border: solid 1px black;
+	margin: 0px;
+	font-family: Poppins;
+	text-align: center;
+	vertical-align: middle;
+	line-height: 30px;
+	-webkit-user-select: none; /* Safari */        
+	-moz-user-select: none; /* Firefox */
+	-ms-user-select: none; /* IE10+/Edge */
+	user-select: none; /* Standard */
+}
+
+.scheduleText {
+	font-family: Poppins;
+	font-size: 25px;
+	color: black;
+	-webkit-text-stroke: 1px black;
+	-webkit-user-select: none; /* Safari */        
+	-moz-user-select: none; /* Firefox */
+	-ms-user-select: none; /* IE10+/Edge */
+	user-select: none; /* Standard */
+}
+
+.scheduleText.sleep {
+	color: midnightblue;
+}
+
+.scheduleText.work {
+	color: orange;
+}
+
+.scheduleText.recreation {
+	color: limegreen;
+}
+
+.scheduleBox.sleep {
+	background-color: midnightblue;
+}
+
+.scheduleBox.sleep_selector:hover {
+	background-color: royalblue;
+}
+
+
+.scheduleBox.work {
+	background-color: orange;
+}
+
+.scheduleBox.work_selector:hover {
+	background-color: gold;
+}
+
+.scheduleBox.recreation {
+	background-color: limegreen;
+}
+
+.scheduleBox.recreation_selector:hover {
+	background-color: lime;
 }
