speed control via keyboard

--- a/main.css
+++ b/main.css
@@ -90,6 +90,7 @@ body {
 	-moz-user-select: none; /* Firefox */
 	-ms-user-select: none; /* IE10+/Edge */
 	user-select: none; /* Standard */
+	z-index: 1;
 }
 
 .scheduleText {
@@ -101,6 +102,7 @@ body {
 	-moz-user-select: none; /* Firefox */
 	-ms-user-select: none; /* IE10+/Edge */
 	user-select: none; /* Standard */
+	z-index: 1;
 }
 
 .scheduleText.sleep {
@@ -139,3 +141,4 @@ body {
 .scheduleBox.recreation_selector:hover {
 	background-color: lime;
 }
+
